--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -9,6 +9,9 @@
         <h:outputScript name="./dist/vis.js"/>
 
         <title>Facelet Title</title>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+         <script src="https://d3js.org/d3.v7.min.js"></script>
+
     </h:head>
     <h:body>
         <div id="mynetwork"></div>
